Range example (#2)
Range example