@@ -42,3 +42,5 @@ tasks.withType(JavaCompile).each {
 test {
     jvmArgs(['--enable-preview'])
 }
+
+applicationDefaultJvmArgs = ["--enable-preview"]
